--- a/app/globals.css
+++ b/app/globals.css
@@ -26,6 +26,7 @@ body {
 }
 
 @layer utilities {
+  /* INPUT ANIMATION */
   .input-wrapper {
     @apply relative rounded-full overflow-hidden;
     background: rgba(0, 0, 0, 0.1);
@@ -40,11 +41,59 @@ body {
     @apply absolute h-[1000%] w-[150%] left-[-25%] top-[-450%] content-[''] animate-border-spin;
   }
   .input-wrapper.active .input-content {
-    background: rgb(231, 230, 254);
+    background: var(--background-color);
   }
 
   .input-content {
     @apply absolute h-[calc(100%-4px)] w-[calc(100%-4px)] left-[2px] top-[2px] rounded-full px-4;
     background: var(--background-color);
+  }
+
+  @media (prefers-color-scheme: dark)  {
+    .input-wrapper {
+      background: rgba(255, 255, 255, 0.3);
+    }
+    .input-wrapper.active .input-content {
+      background: var(--background-color);
+    }
+  }
+
+  /* RECOMMENDATIONS SECTION */
+  .recommendations > h2 {
+    @apply text-3xl font-bold mb-6 mt-16;
+  }
+
+  .recommendations > ul {
+    @apply grid grid-cols-1 md:grid-cols-4 gap-8;
+  }
+  .recommendations > ul > li {
+    @apply mb-4;
+  }
+  .recommendations > ul > li > h3 {
+    @apply text-xl font-bold mb-2 overflow-hidden text-ellipsis md:h-14;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+   -webkit-box-orient: vertical;
+  }
+  .recommendations > ul > li > p {
+    @apply text-base overflow-hidden text-ellipsis md:h-36;
+    display: -webkit-box;
+    -webkit-line-clamp: 6;
+   -webkit-box-orient: vertical;
+  }
+  .recommendations > ul > li > p:first-of-type {
+    @apply mb-4;
+  }
+  .recommendations .rating {
+    @apply flex flex-row gap-4;
+  }
+  .recommendations .rating > a {
+    @apply p-2 bg-neutral-400 rounded-lg font-bold flex-1 text-center text-white;
+  }
+  .recommendations .rating > a:first-child {
+    @apply bg-yellow-500;
+  }
+  .recommendations .rating > a:last-child {
+    @apply bg-rose-500;
   }
 }
